Updated Features Part

--- a/index.html
+++ b/index.html
@@ -29,5 +29,13 @@
     </div>
     <br><br><br>
     <hr>
+
+    <h2 style="text-align: center;">Featured Products SALE !!!</h2>
+    <div class="featuredImages" style="text-align: center;">
+        <img src="images/Featured1.jpg" alt="Shopping" width="500px" height="300px">
+        <p>Fresh Vegetables</p>
+        <img src="images/Featured2.jpg" alt="Shopping" width="500px" height="300px">
+        <p>Awesome Clothes</p>
+    </div>
 </body>
 </html>
