--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <title>Apka Ration</title>
 </head>
 <body>
-    <nav>
-        <input type="text" name = "searched" placeholder = "Search...">
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Shop</li>
-            <li>Help</li>
-            <li id = "cart">Your Cart</li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <input type="text" name = "searched" placeholder = "Search...">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Help</a></li>
+                <li id = "cart"><a href="#">Your Cart</a></li>
+            </ul>
+        </nav>
+    </header>
     <h2 style="text-align: center;">SASTA BHI, SABSE ACHA BHI</h2>                    <!--Eyecatching Tagline to describe your website-->
     <div style="text-align: center;">
         <img src="images/Grocery1.jpg" alt="ShopImage" width="300px" height="200">
