--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link rel="stylesheet" href ="css/style.css">
     <title>Apka Ration</title>
 </head>
 <body>
     <header>
         <nav>
-            <input type="text" name = "searched" placeholder = "Search...">
+            <!-- <input type="text" name = "searched" placeholder = "Search..."> -->
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
