--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -21,7 +21,7 @@
     
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">    <!--to make the color of navbar blue you just have to change bg-dark to bg-primary-->
         <div class="container-fluid">
           <a class="navbar-brand" href="#">BPK's Space Travel</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,6 +65,36 @@
       </nav>
 
     <!-- CARAOUSEL -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/carousel1.jpg" alt="SpaceImage" height="601px" width="1370px">
+        </div>
+        <div class="carousel-item">
+          <img src="images/carousel2.jpg" alt="SpaceImage" height="601px" width="1370px">
+        </div>
+        <div class="carousel-item">
+          <img src="images/carousel3.jpg" alt="SpaceImage" height="601px" width="1370px">
+        </div>
+        <div class="carousel-item">
+          <img src="images/carousel4.jpg" alt="SpaceImage" height="601px" width="1370px">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
     <!-- SERVICE OFFERED -->
 
