Completed carousel section

--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -74,16 +74,16 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/carousel1.jpg" alt="SpaceImage" height="601px" width="1370px">
+          <img src="images/carousel1.jpg" alt="SpaceImage" class="d-block w-100" class="img-fluid img-responsive" style="height: 600px;">    <!--class d-block w-100 is important rest class img-fluid img-responsive is okay types or you can say kind of optional-->
         </div>
         <div class="carousel-item">
-          <img src="images/carousel2.jpg" alt="SpaceImage" height="601px" width="1370px">
+          <img src="images/carousel2.jpg" alt="SpaceImage" class="d-block w-100" class="img-fluid img-responsive" style="height: 600px;">
         </div>
         <div class="carousel-item">
-          <img src="images/carousel3.jpg" alt="SpaceImage" height="601px" width="1370px">
+          <img src="images/carousel3.jpg" alt="SpaceImage" class="d-block w-100" class="img-fluid img-responsive" style="height: 600px;">
         </div>
         <div class="carousel-item">
-          <img src="images/carousel4.jpg" alt="SpaceImage" height="601px" width="1370px">
+          <img src="images/carousel4.jpg" alt="SpaceImage" class="d-block w-100" class="img-fluid img-responsive" style="height: 600px;">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
