completed services offered using section and grid model

--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -97,6 +97,47 @@
     </div>
 
     <!-- SERVICE OFFERED -->
+    <section id="servicesOffered" class="container">       <!--class container in bootstrap adds little margin on both side of the part whereever it is used, like here section k dono taraf thora thora margin add kar dega-->
+      <h1 class="text-center">Services Offered</h1>    <!--We have a default class text-center in bootstrap that centers our element-->
+      <hr>
+      <!-- Now below we will use grid model which says in one row you can have a sum of 12 columns which you need to mention in the class col-sm-value(number), it can either be a combination of 4*4*4 or 6*6 or 3*3*3*3 or anything bus total 12 sum hi ho sakte hai ak row me according to the grid model -->
+      <div class="row">
+        <div class="col-sm-4">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
+          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
+          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
+          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
+          </p>
+        </div>
+      </div>
+      <!-- Another row below isme sum 6*6 derha hu so it'll make 2 columns which sums 12 in a row-->
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="images/carousel1.jpg" alt=".." style="width: 550px;">
+        </div>
+        <div class="col-sm-6">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
+          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
+          </p>
+        </div>
+      </div>
+      <!-- Another row below isme sum directly 12 derha hu so it'll cover the whole row-->
+      <div class="row">
+        <div class="col-sm-12">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
+          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
+          </p>
+        </div>
+      </div>
+    </section>
 
     <!-- GALLERY & BUY NOW -->
 
