--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -74,16 +74,16 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/carousel1.jpg" alt="SpaceImage" class="d-block w-100" class="img-fluid img-responsive" style="height: 600px;">    <!--class d-block w-100 is important rest class img-fluid img-responsive is okay types or you can say kind of optional-->
+          <img src="images/carousel1.jpg" alt="SpaceImage" class="d-block w-100" class="img-fluid img-responsive" style="height: 600px;">    <!--class d-block w-100 is important rest this class img-fluid img-responsive is of no use here but it is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e whatever your value is, by using this class img-fluid img-responsive it'll fit the image properly in that boundary/grid-->-->
         </div>
         <div class="carousel-item">
-          <img src="images/carousel2.jpg" alt="SpaceImage" class="d-block w-100" class="img-fluid img-responsive" style="height: 600px;">
+          <img src="images/carousel2.jpg" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
         </div>
         <div class="carousel-item">
-          <img src="images/carousel3.jpg" alt="SpaceImage" class="d-block w-100" class="img-fluid img-responsive" style="height: 600px;">
+          <img src="images/carousel3.jpg" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
         </div>
         <div class="carousel-item">
-          <img src="images/carousel4.jpg" alt="SpaceImage" class="d-block w-100" class="img-fluid img-responsive" style="height: 600px;">
+          <img src="images/carousel4.jpg" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -121,7 +121,7 @@
       <!-- Another row below isme sum 6*6 derha hu so it'll make 2 columns which sums 12 in a row-->
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/carousel1.jpg" alt=".." style="width: 550px;">
+          <img src="images/carousel1.jpg" alt=".." class="img-fluid img-responsive">    <!--so this class img-fluid img-responsive is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e 6 here so by using this class it'll fit the image properly in that boundary-->
         </div>
         <div class="col-sm-6">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
