Completed the gallery section and also added a large button for booking

--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -118,17 +118,6 @@
           </p>
         </div>
       </div>
-      <!-- Another row below isme sum 6*6 derha hu so it'll make 2 columns which sums 12 in a row-->
-      <div class="row">
-        <div class="col-sm-6">
-          <img src="images/carousel1.jpg" alt=".." class="img-fluid img-responsive">    <!--so this class img-fluid img-responsive is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e 6 here so by using this class it'll fit the image properly in that boundary-->
-        </div>
-        <div class="col-sm-6">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
-          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
-          </p>
-        </div>
-      </div>
       <!-- Another row below isme sum directly 12 derha hu so it'll cover the whole row-->
       <div class="row">
         <div class="col-sm-12">
@@ -140,6 +129,47 @@
     </section>
 
     <!-- GALLERY & BUY NOW -->
+    <section id="gallery" class="container">
+      <!-- Another row below isme sum 6*6 derha hu so it'll make 2 columns which sums 12 in a row-->
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="images/carousel1.jpg" alt=".." class="img-fluid img-responsive">    <!--so this class img-fluid img-responsive is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e 6 here so by using this class it'll fit the image properly in that boundary-->
+        </div>
+        <div class="col-sm-6">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
+          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
+          </p>
+        </div>
+      </div>
+      <!-- Another row below isme sum 6*6 derha hu which sums 12 in a row which is the same as above, the only difference here will be that we will just replace the first div with another just for a good look isme hamara image right side me aa jaiga that's it while upar wale me image left side me tha-->
+      <div class="row">
+        <div class="col-sm-6">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
+          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
+          </p>
+        </div>
+        <div class="col-sm-6">
+            <img src="images/carousel1.jpg" alt=".." class="img-fluid img-responsive">
+        </div>
+      </div>
+      <!--Another row below isme sum 6*6 derha hu so it'll make 2 columns which sums 12 in a row same as the first-->
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="images/carousel1.jpg" alt=".." class="img-fluid img-responsive">    <!--so this class img-fluid img-responsive is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e 6 here so by using this class it'll fit the image properly in that boundary-->
+        </div>
+        <div class="col-sm-6">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
+          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
+          </p>
+        </div>
+      </div>
+      <!-- Adding button for booking part -->
+      <!-- <button type="button" class="btn btn-primary btn-lg btn-block">Book your travel now</button> -->
+      <div class="d-grid gap-2">
+        <button class="btn btn-dark" type="button">Book your travel now</button>
+      </div>
+
+    </section>
 
     <!-- FOOTER -->
 
