--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -133,7 +133,7 @@
       <!-- Another row below isme sum 6*6 derha hu so it'll make 2 columns which sums 12 in a row-->
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/carousel1.jpg" alt=".." class="img-fluid img-responsive">    <!--so this class img-fluid img-responsive is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e 6 here so by using this class it'll fit the image properly in that boundary-->
+          <img src="images/gallery1.jpg" alt=".." class="img-fluid img-responsive">    <!--so this class img-fluid img-responsive is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e 6 here so by using this class it'll fit the image properly in that boundary-->
         </div>
         <div class="col-sm-6">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
@@ -149,13 +149,13 @@
           </p>
         </div>
         <div class="col-sm-6">
-            <img src="images/carousel1.jpg" alt=".." class="img-fluid img-responsive">
+            <img src="images/gallery1.jpg" alt=".." class="img-fluid img-responsive">
         </div>
       </div>
       <!--Another row below isme sum 6*6 derha hu so it'll make 2 columns which sums 12 in a row same as the first-->
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/carousel1.jpg" alt=".." class="img-fluid img-responsive">    <!--so this class img-fluid img-responsive is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e 6 here so by using this class it'll fit the image properly in that boundary-->
+          <img src="images/gallery1.jpg" alt=".." class="img-fluid img-responsive">    <!--so this class img-fluid img-responsive is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e 6 here so by using this class it'll fit the image properly in that boundary-->
         </div>
         <div class="col-sm-6">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
@@ -165,14 +165,36 @@
       </div>
       <!-- Adding button for booking part -->
       <!-- <button type="button" class="btn btn-primary btn-lg btn-block">Book your travel now</button> -->
-      <div class="d-grid gap-2">
-        <button class="btn btn-dark" type="button">Book your travel now</button>
+      <div class="d-grid gap-2">          <!--class d-grid gap-2 is used for getting a large button-->
+        <button class="btn btn-secondary" type="button">Book your travel now</button>
       </div>
 
     </section>
 
     <!-- FOOTER -->
-
+    <footer>      <!-- so footer ko bhi hum tin 3 grid of 4*4*4 (i.e = 12) me divide karnge with same grid method-->
+      <section id="footer" class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <!-- Logo & Copyright ka section hoga ye-->
+            <img src="images/logo1.png" alt=".." class="img-fluid img-responsive">
+          </div>
+          <div class="col-sm-4">
+            <!-- Links ka section hoga ye-->
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms and Conditions</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <!-- Contact ka section hoga ye -->
+            <p>Phone : 000000</p>
+            <p>Email : help@space.com</p>
+          </div>
+        </div>
+      </section>
+    </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
