Added Services in navbar and also added links to the anchor tags of li of navbar

--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -35,16 +35,19 @@
               <a class="nav-link active" aria-current="page" href="#">BPK's Space Travel</a>
             </li>
             <li class="nav-item">       <!-- if you write active inside the class beside of nav-link the your navbar item(i.e Home here) will be lightned up-->
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="#carouselExampleIndicators">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#servicesOffered">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Gallery</a>
+              <a class="nav-link" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" href="#main">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#footer">Contact Us</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link disabled">Disabled</a>
@@ -264,8 +267,8 @@
             <center>
               <hr style="border: 2px solid #FFFFFF; width: 50%;">
             </center>
-            <p>Phone : 000000</p>
-            <p>Email : help@space.com</p>
+            <p>Phone : 9999900000</p>
+            <p>Email : bpkstechpage@gmail.com</p>
           </div>
         </div>
       </section>
