--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -147,17 +147,17 @@
       <!-- Now below we will use grid model which says in one row you can have a sum of 12 columns which you need to mention in the class col-sm-value(number), it can either be a combination of 4*4*4 or 6*6 or 3*3*3*3 or anything bus total 12 sum hi ho sakte hai ak row me according to the grid model -->
       <div class="row">
         <div class="col-sm-4 servicesColumn">
-          <img src="images/services.png" alt=".." class="img-fluid img-responsive" width="30%">
+          <img src="images/services1.png" alt=".." class="img-fluid img-responsive" width="30%">
           <p class="servicesContent">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
           </p>
         </div>
         <div class="col-sm-4 servicesColumn">
-          <img src="images/services.png" alt=".." class="img-fluid img-responsive" width="30%">
+          <img src="images/services2.png" alt=".." class="img-fluid img-responsive" width="30%">
           <p class="servicesContent">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
           </p>
         </div>
         <div class="col-sm-4 servicesColumn">
-          <img src="images/services.png" alt=".." class="img-fluid img-responsive" width="30%">
+          <img src="images/services3.png" alt=".." class="img-fluid img-responsive" width="30%">
           <p class="servicesContent">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
           </p>
         </div>
