completed my landing page

--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -114,7 +114,7 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button> -->
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -123,9 +123,9 @@
         <div class="carousel-item">
           <img src="images/carousel2.jpg" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
         </div>
-        <!-- <div class="carousel-item">
-          <img src="images/carousel3.jpg" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
-        </div> -->
+        <div class="carousel-item">
+          <img src="images/carousel3.png" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
+        </div>
         <div class="carousel-item">
           <img src="images/carousel4.jpg" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
         </div>
@@ -148,17 +148,20 @@
       <div class="row">
         <div class="col-sm-4 servicesColumn">
           <img src="images/services1.png" alt=".." class="img-fluid img-responsive" width="30%">
-          <p class="servicesContent">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
+          <h3 style="margin-top: 30px;">Space Floating</h3>
+          <p class="servicesContent">Get the sensation of "floating" in space as you stand on the platform with the module slowly rotating around you, where you can actually experience the sensation right here floating in the space!
           </p>
         </div>
         <div class="col-sm-4 servicesColumn">
           <img src="images/services2.png" alt=".." class="img-fluid img-responsive" width="30%">
-          <p class="servicesContent">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
+          <h3 style="margin-top: 30px;">Rocket Trip</h3>
+          <p class="servicesContent">All you need to do is book a reduced-gravity flight, where a plane flies in a series of parabolas (or arch-like shapes) during which passengers experience simulated weightlessness through free fall.
           </p>
         </div>
         <div class="col-sm-4 servicesColumn">
           <img src="images/services3.png" alt=".." class="img-fluid img-responsive" width="30%">
-          <p class="servicesContent">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
+          <h3 style="margin-top: 30px;">Landing on Moon</h3>
+          <p class="servicesContent">The Moon will provide you with new views of early Earth, how the Earth-Moon system and the solar system formed and evolved, and the role of asteroid impacts in influencing Earth's history — and possibly future!
           </p>
         </div>
       </div>
@@ -170,8 +173,8 @@
           </p>
         </div>
       </div> -->
+      <hr>
     </section>
-
     <!-- GALLERY & BUY NOW -->
     <section id="gallery" class="container">
       <!-- Another row below isme sum 6*6 derha hu so it'll make 2 columns which sums 12 in a row-->
@@ -179,18 +182,20 @@
         <div class="col-sm-6 galleryColumn">
           <img src="images/gallery1.jpg" alt=".." class="img-fluid img-responsive" width="70%" style="border-radius: 80%;">    <!--so this class img-fluid img-responsive is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e 6 here so by using this class it'll fit the image properly in that boundary-->
         </div>
-        <div class="col-sm-6 galleryColumn">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
-          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
+        <div class="col-sm-6">
+          <p>In the first part of your experience, you'll learn about how astronauts protect themselves while living and working in space.
+            Experiment with a vacuum chamber to see how common objects behave in zero pressure, examine an x-ray of a full spacesuit to observe its many protective features, see a hole blown through a thick metal plate by a simulated meteoroid and watch a slow-motion video of the impact.           
+            Objects on display in this area include a pair of Neil Armstrong's gloves worn during his historic Apollo 11 mission, an Apollo helmet and a Canyon Diablo meteorite.
           </p>
         </div>
       </div>
       <hr>
       <!-- Another row below isme sum 6*6 derha hu which sums 12 in a row which is the same as above, the only difference here will be that we will just replace the first div with another just for a good look isme hamara image right side me aa jaiga that's it while upar wale me image left side me tha-->
       <div class="row">
-        <div class="col-sm-6 galleryColumn">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
-          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
+        <div class="col-sm-6">
+          <p>No one ever said working in space would be easy. In fact, it can be quite difficult! Especially, when you're in a spacesuit.
+            Experience the difficulties of working in space firsthand when you don a spacesuit glove inside a partial vacuum. Then, take your turn at controlling a robotic arm the way astronauts do, using hand controllers and video monitors, to complete mission tasks like docking a supply vessel.
+            In space, losing power can have devastating consequences. Test out your skills as you manage the energy system of an orbiting space station to keep life support equipment up and running.
           </p>
         </div>
         <div class="col-sm-6 galleryColumn">
@@ -204,16 +209,17 @@
           <img src="images/gallery2.jpg" alt=".." class="img-fluid img-responsive" width="70%" style="border-radius: 90%;">    <!--so this class img-fluid img-responsive is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e 6 here so by using this class it'll fit the image properly in that boundary-->
         </div>
         <div class="col-sm-6">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum veniam, impedit est vel possimus ullam quas aliquam voluptatibus cum libero saepe nesciunt beatae magnam reprehenderit. Libero perspiciatis eum temporibus. Doloribus!
-          Officia culpa maxime officiis repellat magnam, molestias id dolor non cumque obcaecati ipsum eius voluptas libero laborum in saepe earum, dignissimos quo rem alias cupiditate odit facere illo? Rerum, veritatis.
+          <p>There's no shortage of hype surrounding the commercial space industry. But while tech leaders promise us moon bases and settlements on Mars, the space economy has thus far remained distinctly local — at least in a cosmic sense. Last year, however, we crossed an important threshold:For the first time in human history, humans accessed space via a vehicle built and owned not by any government, but by a private corporation with its sights set on affordable space settlement. It was the first significant step towards building an economy both in space and for space. The implications — for business, policy, and society at large — are hard to overstate.
           </p>
         </div>
       </div>
       <!-- Adding button for booking part -->
       <!-- <button type="button" class="btn btn-primary btn-lg btn-block">Book your travel now</button> -->
+      <a href="#navbarsExample08" style="text-decoration:none;">
       <div class="d-grid gap-2">          <!--class d-grid gap-2 is used for getting a large button-->
-        <button class="btn btn-dark" type="button">Book your travel now</button>
-      </div>
+          <button class="btn btn-dark" type="button">Book your travel now</button>
+        </div>
+      </a>
       <hr>
     </section>
 
@@ -235,7 +241,7 @@
          <aside id="sidebar">
              <div class="dark">
               <h3 class="text-center">What Else?</h3>
-              <p>We also have a Tech platform BPK's Techpage in which we help you to get professional webpages for any of your respective domains with beautiful and attractive outlook which is really going to increase your value in the market and that too at a very low cost.</p>
+              <p>We also have a Tech platform <a href="https://yourbpkstechpage.netlify.app" target="_blank" style="text-decoration:none;" class="techPageLink"> BPK's Techpage</a> in which we help you to get professional webpages for any of your respective domains with beautiful and attractive outlook which is really going to increase your value in the market and that too at a very low cost.</p>
               <p>And at the same time we even help you for marketing your websites developed by us.</p>
              </div>
           </aside>
@@ -256,7 +262,7 @@
               <hr style="border: 2px solid #FFFFFF; width: 50%;">
             </center>
             
-            <a href="#" class="footer_links">About</a><br>
+            <a href="#main" class="footer_links">About</a><br>
             <a href="#" class="footer_links">Privacy Policy</a><br>
             <a href="#" class="footer_links">Terms and Conditions</a><br>
             
