completed my landing page

--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -215,7 +215,7 @@
       </div>
       <!-- Adding button for booking part -->
       <!-- <button type="button" class="btn btn-primary btn-lg btn-block">Book your travel now</button> -->
-      <a href="#navbarsExample08" style="text-decoration:none;">
+      <a href="https://www.spaceperspective.com/bookyourspaceflight" style="text-decoration:none;" target="_blank">
       <div class="d-grid gap-2">          <!--class d-grid gap-2 is used for getting a large button-->
           <button class="btn btn-dark" type="button">Book your travel now</button>
         </div>
