Tried to add move to top button

--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -279,6 +279,9 @@
         </div>
       </section>
       <br>
+      <!-- <button id="topbtn" title="Back To Top" style="display: block;">
+        <i class="fas fa-angle-up" aria-hidden="true"></i>
+      </button> -->
       <p class="text-center">Copyright &copy; BPK's Space Travel 2022. All rights reserved.</p>
       <p class="text-center">Made with &hearts; in India.</p>
     </footer>
