Added Music Player

--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -16,6 +16,7 @@
     <title>Bishal's Space Travel &hearts;</title>
 
     <!-- Favicon -->
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     
