--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -50,6 +50,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#footer">Contact Us</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Music_Player_Using_LinkedList/index.html" target="_blank">Music🎧</a>
+            </li>
             <!-- <li class="nav-item">
               <a class="nav-link disabled">Disabled</a>
             </li> -->
