--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -125,7 +125,7 @@
           <img src="images/carousel1.jpg" alt="SpaceImage" class="d-block w-100" class="img-fluid img-responsive" style="height: 600px;">    <!--class d-block w-100 is important rest this class img-fluid img-responsive is of no use here but it is mainly used while we are using the grid model, as this won't let your image go out of the column sum mentioned i.e whatever your value is, by using this class img-fluid img-responsive it'll fit the image properly in that boundary/grid-->
         </div>
         <div class="carousel-item">
-          <img src="images/carousel2.jpg" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
+          <img src="images/tripPlan.webp" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
         </div>
         <div class="carousel-item">
           <img src="images/carousel3.png" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
