--- a/Space Travel Landing Page/Music_Player_Using_LinkedList/index.html
+++ b/Space Travel Landing Page/Music_Player_Using_LinkedList/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div class="outer-wrapper flex">
+      <marquee behavior="" direction=""><h1 style="color: aquamarine;">Flush away your tensions, deep dive with BPK's Music.</h1></marquee>
       <!-- wrapper for music player content -->
       <div class="music-player-wrapper flex">
         <!-- wrapper for music info -->
