--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -128,6 +128,9 @@
           <img src="images/tripPlan.webp" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
         </div>
         <div class="carousel-item">
+          <img src="images/carousel5.webp" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
+        </div>
+        <div class="carousel-item">
           <img src="images/carousel3.png" alt="SpaceImage" class="d-block w-100" style="height: 600px;">
         </div>
         <div class="carousel-item">
