Added music gallery

--- a/Space Travel Landing Page/Music_Player_Using_LinkedList/index.html
+++ b/Space Travel Landing Page/Music_Player_Using_LinkedList/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div class="outer-wrapper flex">
+      <h1 style="color:aqua">MUSIC GALLERY</h1>
       <marquee behavior="" direction=""><h1 style="color: aquamarine;">Here at BPK's Music, you'll get the universal language of mankind.</h1></marquee>
       <!-- wrapper for music player content -->
       <div class="music-player-wrapper flex">
