--- a/Space Travel Landing Page/Music_Player_Using_LinkedList/index.html
+++ b/Space Travel Landing Page/Music_Player_Using_LinkedList/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BPK's Music Player</title>
     <!-- font awesome cdn -->
+    <link rel="icon" href="favicon.ico">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     />
     <!-- css links -->
     <link rel="stylesheet" href="./css/style.css" />
-    <!-- <link rel="icon" href="favicon.ico"> -->
   </head>
   <body>
     <div class="outer-wrapper flex">
