Added Dice and Drum Kit

--- a/Space Travel Landing Page/Dicee Challenge - Completed/dicee.html
+++ b/Space Travel Landing Page/Dicee Challenge - Completed/dicee.html
@@ -10,7 +10,7 @@
   <body>
 
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Don't Fight, Refresh Me</h1>
 
       <div class="dice">
         <p>Player 1</p>
@@ -29,7 +29,7 @@
       </body>
 
       <footer>
-        www 🎲 BPK Games 🎲 com
+        www 🎲 BPK Games 🎲 com <br>
         Made with ❤️ in India.
       </footer>
     </html>
