Added Dice and Drum Kit

--- a/Space Travel Landing Page/index.html
+++ b/Space Travel Landing Page/index.html
@@ -53,6 +53,12 @@
             <li class="nav-item">
               <a class="nav-link" href="./Music_Player_Using_LinkedList/index.html" target="_blank">Music🎧</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Dicee Challenge - Completed/dicee.html" target="_blank">Dice🎲</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Drum Kit Completed/index.html" target="_blank">Drum Kit🥁</a>
+            </li>
             <!-- <li class="nav-item">
               <a class="nav-link disabled">Disabled</a>
             </li> -->
